--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,7 @@ header .right span span.active {
 }
 
 #landing-end {
-  padding: 2% 5% 5%;
+  padding: 2% 5% 0% 5%;
 }
 #landing-end h2 {
   line-height: 1.1;
@@ -256,16 +256,19 @@ header .right span span.active {
 }
 #landing-end .follow-us {
   margin-top: 60px;
-  background-color: #eeb98d;
+  background-color: #050F27;
   display: flex;
   color: white;
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
   gap: 28px;
-  padding: 60px;
-  border-radius: 60px;
+  padding: 125px;
   overflow: hidden;
+  width: 100vw; /* Full width of the viewport */
+  position: relative; /* Ensure it covers the full width */
+  left: 50%; /* Adjust position */
+  transform: translateX(-50%); /* Center the element */
 }
 #landing-end .follow-us .container {
   display: flex;
@@ -279,7 +282,7 @@ header .right span span.active {
 }
 #landing-end .follow-us .container button {
   background-color: white;
-  color: #eeb98d;
+  color: #050F27;
   font-weight: 600;
   border-radius: 60px;
   height: 200px;
@@ -294,11 +297,9 @@ header .right span span.active {
 }
 #landing-end .follow-us .container .background-leaf {
   position: absolute;
-  right: -500px;
-  top: -380px;
-  height: 800px;
-  transform: rotate(-50deg);
-  opacity: 0.1;
+  right: -150px;
+  top: -150px;
+  height: 600px;
 }
 #landing-end .follow-us .container .icons-wrapper img {
   height: 60px;
@@ -314,7 +315,7 @@ header .right span span.active {
   padding: 20px 30px;
   font-weight: 600;
   border-radius: 50px;
-  background-color: #F3CCAD;
+  background-color: #4B5263;
 }
 
 .quote-wrapper {
@@ -340,7 +341,7 @@ header .right span span.active {
   animation: fadeOut 0.1s forwards;
 }
 .quote-wrapper button {
-  background-color: #121B32;
+  background-color: #979eb1;
   border-radius: 60px;
   color: white;
   font-weight: 600;
