--- a/styles.scss
+++ b/styles.scss
@@ -29,25 +29,30 @@ header {
   position: fixed;
   top: 0px;
   left: 0px;
+
   .logo {
     display: flex;
     align-items: center;
     font-weight: 600;
     font-size: 24px;
     gap: 10px;
+
     img {
       height: 60px;
     }
   }
+
   .right {
     display: flex;
     align-items: center;
     gap: 30px;
     font-size: 18px;
+
     a {
       text-decoration: none;
       color: unset;
     }
+
     #contactus {
       font-weight: 600;
       padding: 10px 20px;
@@ -56,15 +61,19 @@ header {
       color: #ffffff;
       transition: transform 0.3s ease;
       word-break: nowrap;
+
       &:hover {
         transform: scale(1.1);
       }
     }
+
     span {
       position: relative;
       font-weight: 500;
+
       span {
         display: none;
+
         &.active {
           display: inline;
           font-weight: 900;
@@ -81,19 +90,22 @@ header {
   padding: 5% 5%;
   text-align: center;
   margin-top: 96px;
+
   h1 {
     font-size: 66px;
     font-weight: 900;
     letter-spacing: -3px;
     line-height: 1;
   }
-  & > h2 {
+
+  &>h2 {
     margin-top: 40px;
     font-weight: 500;
     width: max(60%, 300px);
     margin-left: auto;
     margin-right: auto;
   }
+
   button.our-services {
     all: unset;
     background-color: #eeb98d;
@@ -102,6 +114,7 @@ header {
     border-radius: 21px;
     margin-top: 40px;
   }
+
   .carousel {
     // width: 80%;
     margin-top: 70px;
@@ -127,6 +140,7 @@ header {
       min-width: 400px;
       border-radius: 36px;
       overflow: hidden;
+
       img {
         width: 100%;
         display: block;
@@ -149,6 +163,7 @@ header {
 
 #about-section {
   padding: 2% 8% 5%;
+
   // .grid-container{
   //     display: grid;
   //     column-gap: 20px;
@@ -162,28 +177,31 @@ header {
   //         text-align: center;
   //     }
   //     .item1{
-    //         grid-column: 1 / 3;
-    //     }
-    // }
-    h2 {
-        font-size: 250%;
-        line-height: 1.1;
-        letter-spacing: -1px;
-        font-weight: 700;
-    }
-    h3 {
-        line-height: 1.1;
-        letter-spacing: -1px;
-        font-size: 150%;
-        font-weight: 600;
-    }
-    
+  //         grid-column: 1 / 3;
+  //     }
+  // }
+  h2 {
+    font-size: 250%;
+    line-height: 1.1;
+    letter-spacing: -1px;
+    font-weight: 700;
+  }
+
+  h3 {
+    line-height: 1.1;
+    letter-spacing: -1px;
+    font-size: 150%;
+    font-weight: 600;
+  }
+
   .grid-container {
     display: grid;
     // grid-template-rows: auto auto; /* Two rows of equal height */
-    grid-template-columns: 3fr 3fr 1fr 3fr; /* First row: 60% for first column, 30% for second column, 10% for third column */
+    grid-template-columns: 3fr 3fr 1fr 3fr;
+    /* First row: 60% for first column, 30% for second column, 10% for third column */
     column-gap: 16px;
-    row-gap: 36px; /* Optional: Adds a gap between grid items */
+    row-gap: 36px;
+    /* Optional: Adds a gap between grid items */
     grid-auto-rows: 400px;
 
     img {
@@ -212,7 +230,8 @@ header {
       display: flex;
       align-items: center;
       justify-content: center;
-      img{
+
+      img {
         // transform: scale(0.8);
         height: 90%;
         width: auto;
@@ -239,7 +258,7 @@ header {
     }
   }
 
-  .caption-3{
+  .caption-3 {
     margin-top: 80px;
     font-size: 150%;
     text-align: center;
@@ -249,118 +268,139 @@ header {
   }
 }
 
-#landing-end{
-    padding: 2% 5% 5%;
-    h2 {
-        line-height: 1.1;
-        letter-spacing: -1px;
-        font-weight: 700;
-    }
+#landing-end {
+  padding: 2% 5% 0% 5%;
+
+  h2 {
+    line-height: 1.1;
+    letter-spacing: -1px;
+    font-weight: 700;
+  }
+
+  h3 {
+    line-height: 1.1;
+    letter-spacing: -1px;
+    font-weight: 600;
+  }
+
+  button {
+    all: unset;
+    text-align: center;
+    padding: 12px;
+    height: 200px;
+    width: 200px;
+    font-size: 22px;
+  }
+
+  .get-quote {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 60px;
+    border-radius: 60px;
+    background-color: #050F27;
+    color: white;
+
+    // transition: all 0.2s ease;
     h3 {
-        line-height: 1.1;
-        letter-spacing: -1px;
-        font-weight: 600;
+      font-size: 40px;
+      width: 60%;
     }
-    button{
-        all: unset;
-        text-align: center;
-        padding: 12px;
+
+    button {
+      background-color: #121B32;
+      border-radius: 60px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all .2s ease;
+
+      &:hover {
+        background-color: #20315c;
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  .follow-us {
+    margin-top: 60px;
+    background-color: #050F27;
+    ;
+    display: flex;
+    color: white;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 28px;
+    padding: 125px;
+    overflow: hidden;
+    width: 100vw;
+    /* Full width of the viewport */
+    position: relative;
+    /* Ensure it covers the full width */
+    left: 50%;
+    /* Adjust position */
+    transform: translateX(-50%);
+    /* Center the element */
+
+    .container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      position: relative;
+
+      h2 {
+        font-size: 62px;
+      }
+
+      button {
+        background-color: white;
+        color: #050F27;
+        font-weight: 600;
+        border-radius: 60px;
         height: 200px;
         width: 200px;
-        font-size: 22px;
-    }
-    .get-quote{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 60px;
-        border-radius: 60px;
-        background-color: #050F27;
-        color: white;
-        // transition: all 0.2s ease;
-        h3{
-          font-size: 40px;
-          width: 60%;
+        min-width: 200px;
+        z-index: 2;
+        cursor: pointer;
+        transition: all 0.2s ease;
+
+        &:hover {
+          transform: scale(1.1);
         }
-        button{
-          background-color: #121B32;
-          border-radius: 60px;
-          font-weight: 600;
+      }
+
+      .background-leaf {
+        position: absolute;
+        right: -150px;
+        top: -150px;
+        height: 600px;
+      }
+
+      .icons-wrapper {
+        img {
+          height: 60px;
+          margin: 30px 10px 0px;
           cursor: pointer;
-          transition: all .2s ease;
-          &:hover{
-            background-color: #20315c;
-            transform: scale(1.1);
-          }
         }
-        }
-    .follow-us{
-        margin-top: 60px;
-        background-color: #eeb98d;
-        display: flex;
-        color: white;
-        align-items: center;
-        flex-direction: column;
-        justify-content: space-between;
-        gap: 28px;
-        padding: 60px;
-        border-radius: 60px;
-        overflow: hidden;
-        .container{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 100%;
-            position: relative;
-            h2{
-                font-size: 62px;
-            }
-            button{
-                background-color: white;
-                color: #eeb98d;
-                font-weight: 600;
-                border-radius: 60px;
-                height: 200px;
-                width: 200px;
-                min-width: 200px;
-                z-index: 2;
-                cursor: pointer;
-                transition: all 0.2s ease;
-                &:hover{
-                  transform: scale(1.1);
-                }
-            }
-            .background-leaf{
-                position: absolute;
-                right: -500px;
-                top: -380px;
-                height: 800px;
-                transform: rotate(-50deg);
-                opacity: 0.1;
-            }
-            .icons-wrapper{
-              img{
-                height: 60px;
-                margin: 30px 10px 0px;
-                cursor: pointer;
-              }
-            }
-        }
-        .caption-4{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 100%;
-            margin-top: 10px;
-            padding: 20px 30px;
-            font-weight: 600;
-            border-radius: 50px;
-            background-color: #F3CCAD;
-        }
+      }
     }
+
+    .caption-4 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      margin-top: 10px;
+      padding: 20px 30px;
+      font-weight: 600;
+      border-radius: 50px;
+      background-color: #4B5263;
+    }
+  }
 }
 
-.quote-wrapper{
+.quote-wrapper {
   overflow: hidden;
   transition: all .2s ease;
   background-color: rgba(61, 61, 61, 0.845);
@@ -376,24 +416,28 @@ header {
   opacity: 1;
   visibility: visible;
   animation: fadeIn .1s forwards;
-  &.hidden{
+
+  &.hidden {
     opacity: 0;
     visibility: hidden;
     animation: fadeOut .1s forwards;
   }
-  button{
-      background-color: #121B32;
-      border-radius: 60px;
-      color: white;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all .3s ease;
-      &:hover{
-        background-color: #20315c;
-        transform: scale(1.1);
-      }
+
+  button {
+    background-color: #979eb1;
+    border-radius: 60px;
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all .3s ease;
+
+    &:hover {
+      background-color: #20315c;
+      transform: scale(1.1);
     }
-    form{
+  }
+
+  form {
     width: min(460px, 90%);
     display: flex;
     flex-direction: column;
@@ -403,7 +447,9 @@ header {
     background-color: white;
     border-radius: 60px;
     gap: 10px;
-    input, textarea{
+
+    input,
+    textarea {
       all: unset;
       font-size: 22px;
       border: 4px solid #121B32;
@@ -412,11 +458,13 @@ header {
       padding: 10px 16px;
       width: 100%;
     }
-    #enquiry{
+
+    #enquiry {
       height: 140px;
       text-align: start;
     }
-    button{
+
+    button {
       padding: 24px 48px;
       height: fit-content;
       width: fit-content;
@@ -427,33 +475,38 @@ header {
 }
 
 
+
 @keyframes bannermove {
   0% {
     transform: translateX(0);
   }
+
   100% {
-    transform: translateX(-1600px); /* Adjust based on the number of images */
+    transform: translateX(-1600px);
+    /* Adjust based on the number of images */
   }
 }
 
 @keyframes fadeIn {
   from {
-      opacity: 0;
-      transform: scale(0.9);
+    opacity: 0;
+    transform: scale(0.9);
   }
+
   to {
-      opacity: 1;
-      transform: scale(1);
+    opacity: 1;
+    transform: scale(1);
   }
 }
 
 @keyframes fadeOut {
   from {
-      opacity: 1;
-      transform: scale(1);
+    opacity: 1;
+    transform: scale(1);
   }
+
   to {
-      opacity: 0;
-      transform: scale(0.9);
+    opacity: 0;
+    transform: scale(0.9);
   }
 }
