Fixed services page

--- a/footer.css
+++ b/footer.css
@@ -123,7 +123,7 @@ body {
   animation: fadeOut 0.1s forwards;
 }
 .quote-wrapper button {
-  background-color: #979eb1;
+  background-color: #37415d;
   border-radius: 60px;
   color: white;
   font-weight: 600;
