--- a/footer.scss
+++ b/footer.scss
@@ -127,7 +127,7 @@
     animation: fadeOut .1s forwards;
   }
   button{
-      background-color: #979eb1;
+      background-color: #37415d;
       border-radius: 60px;
       color: white;
       font-weight: 600;
