--- a/services.scss
+++ b/services.scss
@@ -14,6 +14,7 @@
 body {
   background-color: #ffffff;
   font-family: "SatoshiVariable", Helvetica, sans-serif;
+  overflow-x:hidden;
 }
 
 header {
@@ -124,6 +125,7 @@ header {
   margin: 5px;
   /* Space around buttons */
   transition: background-color 0.3s, color 0.3s;
+  text-decoration: none;
   /* Smooth hover effects */
 }
 
@@ -136,7 +138,7 @@ header {
 }
 
 #landscaping {
-  padding: 10% 8% 5%;
+  padding: 8% 8% 5%;
 
 
   .grid-container {
@@ -267,21 +269,24 @@ header {
     align-self: center;
     justify-self: center;
     width: 100%;
-    height: auto;
+    height: 100%;
   }
-
+  
   .grid-container1 img {
     width: 100%;
     height: auto;
     border-radius: 10px;
   }
-
+  
   .item5 p {
+    align-items: center;
+    display: flex;
+    height: 100%;
     font-size: 28px;
     font-weight: 700;
     line-height: 1.1;
     margin: 0;
-    padding: 20px;
+    padding: 20px 40px;
     /* Equal padding on all sides */
     background-color: #f5f5f5;
     border-radius: 60px;
@@ -374,4 +379,82 @@ header {
     border-radius: 10px;
   }
 
+}
+
+.quote-wrapper {
+  overflow: hidden;
+  transition: all .2s ease;
+  background-color: rgba(61, 61, 61, 0.845);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 1;
+  visibility: visible;
+  animation: fadeIn .1s forwards;
+
+  h1 {
+    margin-bottom: 10px;
+  }
+  
+  &.hidden {
+    opacity: 0;
+    visibility: hidden;
+    animation: fadeOut .1s forwards;
+  }
+
+  button {
+    background-color: #37415d;
+    border-radius: 60px;
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all .3s ease;
+
+    &:hover {
+      background-color: #20315c;
+      transform: scale(1.1);
+    }
+  }
+
+  form {
+    width: min(460px, 90%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 45px;
+    background-color: white;
+    border-radius: 60px;
+    gap: 10px;
+
+    input,
+    textarea {
+      all: unset;
+      font-size: 22px;
+      border: 4px solid #121B32;
+      border-radius: 22px;
+      color: black;
+      padding: 10px 16px;
+      width: 100%;
+    }
+
+    #enquiry {
+      height: 140px;
+      text-align: start;
+    }
+
+    button {
+      padding: 24px 48px;
+      height: fit-content;
+      width: fit-content;
+      font-size: 22px;
+      margin-top: 16px;
+    }
+  }
 }
