--- a/styles.scss
+++ b/styles.scss
@@ -14,6 +14,7 @@
 body {
   background-color: #ffffff;
   font-family: "SatoshiVariable", Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 header {
@@ -113,6 +114,7 @@ header {
     padding: 10px 20px;
     border-radius: 21px;
     margin-top: 40px;
+    cursor: pointer;
   }
 
   .carousel {
@@ -417,6 +419,10 @@ header {
   visibility: visible;
   animation: fadeIn .1s forwards;
 
+  h1 {
+    margin-bottom: 10px;
+  }
+  
   &.hidden {
     opacity: 0;
     visibility: hidden;
@@ -424,7 +430,7 @@ header {
   }
 
   button {
-    background-color: #979eb1;
+    background-color: #37415d;
     border-radius: 60px;
     color: white;
     font-weight: 600;
