--- a/testimonials.scss
+++ b/testimonials.scss
@@ -14,6 +14,7 @@
 body {
   background-color: #ffffff;
   font-family: "SatoshiVariable", Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 header {
