--- a/footer.css
+++ b/footer.css
@@ -45,7 +45,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   gap: 28px;
-  padding: 125px;
+  padding: 50px 125px;
   overflow: hidden;
   width: 100vw; /* Full width of the viewport */
   position: relative; /* Ensure it covers the full width */
@@ -93,7 +93,7 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  margin-top: 10px;
+  margin-top: 34px;
   padding: 20px 30px;
   font-weight: 600;
   border-radius: 50px;
