--- a/contactus.scss
+++ b/contactus.scss
@@ -37,7 +37,7 @@ header {
         font-weight: 600;
         font-size: 24px;
         gap: 10px;
-
+        pointer-events: none;
         img {
             height: 60px;
         }
