--- a/services.css
+++ b/services.css
@@ -36,6 +36,7 @@ header .logo {
   font-weight: 600;
   font-size: 24px;
   gap: 10px;
+  pointer-events: none;
 }
 header .logo img {
   height: 60px;
@@ -171,7 +172,7 @@ header .right span span.active {
 }
 #landscaping .grid-container1 {
   display: grid;
-  grid-template-columns: 1.6fr 1fr;
+  grid-template-columns: 1.8fr 1fr;
   /* Adjust the first column to be larger */
   grid-template-rows: auto;
   /* Adjust rows based on content */
