--- a/testimonials.css
+++ b/testimonials.css
@@ -36,6 +36,7 @@ header .logo {
   font-weight: 600;
   font-size: 24px;
   gap: 10px;
+  pointer-events: none;
 }
 header .logo img {
   height: 60px;
@@ -197,6 +198,31 @@ header .right span span.active {
   margin: 0 auto; /* Center the container */
   padding: 70px;
 }
+#testimonial-end .grid-container .grid-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background-color: white;
+  border-radius: 24px;
+  padding: 16px;
+}
+#testimonial-end .grid-container .grid-item .testimonial-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+#testimonial-end .grid-container .grid-item .testimonial-wrapper img {
+  height: 40px;
+  width: fit-content;
+}
+#testimonial-end .grid-container .grid-item .testimonial-wrapper img:nth-of-type(2) {
+  transform: rotate(180deg);
+  align-self: flex-end;
+}
+#testimonial-end .grid-container .grid-item .video-text {
+  font-weight: 600;
+  margin-left: 10px;
+}
 #testimonial-end .grid-text1 {
   grid-column: 1/2;
   grid-row: 1/2;
@@ -227,7 +253,7 @@ header .right span span.active {
 #testimonial-end video {
   width: 100%;
   height: auto;
-  border-radius: 20px;
+  border-radius: 30px;
   padding: 10px;
   max-width: 150px;
 }
