--- a/contactus.scss
+++ b/contactus.scss
@@ -88,7 +88,7 @@ header {
 }
 
 #contact-top {
-    padding: 5% 0%;
+    padding: 5% 0% 2% 0%;
     text-align: center;
     margin-top: 96px;
 
@@ -108,7 +108,7 @@ header {
         background-color: #050F27;
         /* Dark blue background */
         border-radius: 40px;
-        flex-basis: 60%;
+        flex-basis: 100%;
         padding: 40px;
         /* Add padding to ensure content is not touching the border */
         margin: 0;
