--- a/services.css
+++ b/services.css
@@ -287,6 +287,7 @@ header .right span span.active {
   width: 100%;
   padding: 20px 0;
   box-sizing: border-box;
+  margin-top: 50px;
 }
 #landscaping .item7 {
   grid-column: 1/2;
@@ -306,8 +307,8 @@ header .right span span.active {
 }
 #landscaping .item7 img {
   width: 100%;
-  height: auto;
-  max-height: 90%;
+  height: 95%;
+  max-height: 100%;
   border-radius: 10px;
 }
 #landscaping .item8 img {
@@ -315,18 +316,21 @@ header .right span span.active {
   height: auto;
   max-height: 90%;
   border-radius: 10px;
+  margin-left: 30px;
 }
 #landscaping .item9 img {
   width: 100%;
   height: auto;
   max-height: 90%;
   border-radius: 10px;
+  margin-left: 50px;
 }
 #landscaping .item10 img {
-  width: 100%;
+  width: 102%;
   height: auto;
   max-height: 90%;
   border-radius: 10px;
+  margin-left: 30px;
 }
 
 .quote-wrapper {
