--- a/services.scss
+++ b/services.scss
@@ -329,6 +329,7 @@ header {
     width: 100%;
     padding: 20px 0;
     box-sizing: border-box;
+    margin-top: 50px;
   }
 
   .item7 {
@@ -353,8 +354,8 @@ header {
 
   .item7 img {
     width: 100%;
-    height: auto;
-    max-height: 90%;
+    height: 95%;
+    max-height: 100%;
     border-radius: 10px;
   }
 
@@ -363,6 +364,7 @@ header {
     height: auto;
     max-height: 90%;
     border-radius: 10px;
+    margin-left: 30px;
   }
 
   .item9 img {
@@ -370,13 +372,17 @@ header {
     height: auto;
     max-height: 90%;
     border-radius: 10px;
+    margin-left: 50px;
+
   }
 
   .item10 img {
-    width: 100%;
+    width: 102%;
     height: auto;
     max-height: 90%;
     border-radius: 10px;
+    margin-left: 30px;
+
   }
 
 }
