--- a/styles.css
+++ b/styles.css
@@ -207,11 +207,20 @@ header .right span span.active {
 }
 #about-section .caption-3 {
   margin-top: 80px;
-  font-size: 150%;
+  font-size: 170%;
+  font-weight: bolder;
   text-align: center;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+}
+#about-section .caption-3 h3 {
+  margin-bottom: 32px;
+}
+#about-section .caption-3 p {
+  font-weight: 600;
+  line-height: 1.1;
+  font-size: 80%;
 }
 
 #landing-end {
