--- a/styles.scss
+++ b/styles.scss
@@ -262,11 +262,20 @@ header {
 
   .caption-3 {
     margin-top: 80px;
-    font-size: 150%;
+    font-size: 170%;
+    font-weight: bolder;
     text-align: center;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    h3 {
+      margin-bottom: 32px;
+    }
+    p {
+      font-weight: 600;
+      line-height: 1.1;
+      font-size: 80%;
+    }
   }
 }
 
