--- a/styles.scss
+++ b/styles.scss
@@ -43,12 +43,35 @@ header {
     }
   }
 
+  .hamburger{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 6px;
+    cursor: pointer;
+    .line {
+      width: 32px;
+      height: 4px;
+      background-color: black;
+    }
+    @media screen and (min-width: 980px) {
+      display: none;
+    }
+  }
+
   .right {
     display: flex;
     align-items: center;
     gap: 30px;
     font-size: 18px;
 
+    &.right-horz{
+      @media screen and (max-width: 980px) {
+        display: none;
+      }
+    }
+    
     a {
       text-decoration: none;
       color: unset;
@@ -84,6 +107,35 @@ header {
         }
       }
     }
+  }
+}
+
+.right-panel {
+  display: flex;
+  min-height: 100vh;
+  width: min(90%, 340px);
+  background-color: white;
+  position: fixed;
+  z-index: 10;
+  box-shadow: -8px 0px 16px 0px hwb(0 36% 64% / 0.274);
+  right: 0px;
+  top: 0px;
+  display: flex;
+  text-align: left;
+  align-items: flex-start;
+  gap: 20px;
+  padding-top: 80px;
+  flex-direction: column;
+  svg{
+    height: 36px;
+    position: absolute;
+    left: -70px;
+    top: 40px;
+    cursor: pointer;
+  }
+  display: none !important;
+  &.visible {
+    display: flex !important;
   }
 }
 
