--- a/services.scss
+++ b/services.scss
@@ -196,9 +196,9 @@ header {
 }
 
 
+
 #landscaping {
   padding: 8% 8% 5%;
-
 
   .grid-container {
     display: grid;
@@ -295,7 +295,6 @@ header {
     /* Keep the image's aspect ratio */
     max-height: 90%;
     /* Limit the maximum height */
-    border-radius: 10px;
   }
 
   .item4 {
@@ -319,7 +318,6 @@ header {
     width: 100%;
     height: auto;
     max-height: 90%;
-    border-radius: 10px;
   }
 
   .item5 {
@@ -334,7 +332,6 @@ header {
   .grid-container1 img {
     width: 100%;
     height: auto;
-    border-radius: 10px;
   }
   
   .item5 p {
@@ -402,27 +399,33 @@ header {
   }
 
   .item9 {
+    img{
+      width: 100%;
+      max-height: 280px !important;
+      border-radius: 40px !important;
+    }
     grid-column: 3 / 4;
     grid-row: 1 / 2;
   }
 
   .item10 {
+    img{
+      width: 100%;
+    }
     grid-column: 2 / 4;
     grid-row: 2 / 3;
   }
 
   .item7 img {
-    width: 100%;
-    height: 95%;
+    width: fit-content;
+    height: 90%;
     max-height: 100%;
-    border-radius: 10px;
+    border-radius: 24px;
   }
 
   .item8 img {
     width: 100%;
-    height: auto;
-    max-height: 90%;
-    border-radius: 10px;
+    height: 95%;
     margin-left: 30px;
   }
 
@@ -430,16 +433,13 @@ header {
     width: 100%;
     height: auto;
     max-height: 90%;
-    border-radius: 10px;
     margin-left: 50px;
 
   }
 
   .item10 img {
-    width: 102%;
+    width: 100%;
     height: auto;
-    max-height: 90%;
-    border-radius: 10px;
     margin-left: 30px;
 
   }
