--- a/contactus.css
+++ b/contactus.css
@@ -10,10 +10,16 @@
   padding: 0px;
 }
 
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   background-color: #ffffff;
   font-family: "SatoshiVariable", Helvetica, sans-serif;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 header {
@@ -30,6 +36,13 @@ header {
   top: 0px;
   left: 0px;
 }
+@media screen and (max-width: 980px) {
+  header {
+    height: 60px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 header .logo {
   display: flex;
   align-items: center;
@@ -38,20 +51,30 @@ header .logo {
   gap: 10px;
   pointer-events: none;
 }
+@media screen and (max-width: 980px) {
+  header .logo {
+    font-size: 18px;
+  }
+}
 header .logo img {
   height: 60px;
+}
+@media screen and (max-width: 980px) {
+  header .logo img {
+    height: 40px;
+  }
 }
 header .hamburger {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 6px;
+  gap: 4px;
   cursor: pointer;
 }
 header .hamburger .line {
-  width: 32px;
-  height: 4px;
+  width: 24px;
+  height: 3px;
   background-color: black;
 }
 @media screen and (min-width: 980px) {
@@ -67,6 +90,11 @@ header .right {
 }
 @media screen and (max-width: 980px) {
   header .right.right-horz {
+    display: none;
+  }
+}
+@media screen and (max-width: 980px) {
+  header .right {
     display: none;
   }
 }
@@ -127,6 +155,11 @@ header .right span span.active {
   margin: 0;
   /* Reset margin */
 }
+@media screen and (max-width: 980px) {
+  #contact-top .details {
+    padding: 20px;
+  }
+}
 #contact-top .info {
   display: flex;
   justify-content: space-between;
@@ -137,15 +170,32 @@ header .right span span.active {
   padding: 20px 20px;
   /* Equal padding on left and right */
 }
+@media screen and (max-width: 980px) {
+  #contact-top .info {
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 0px;
+  }
+}
 #contact-top .info h3 {
   margin: 0;
   font-size: 24px;
   font-weight: 600;
 }
+@media screen and (max-width: 980px) {
+  #contact-top .info h3 {
+    font-size: 20px;
+  }
+}
 #contact-top .info p {
   margin: 0;
   font-size: 22px;
   font-weight: 500;
+}
+@media screen and (max-width: 980px) {
+  #contact-top .info p {
+    font-size: 18px;
+  }
 }
 #contact-top .map {
   flex-basis: 40%;
@@ -162,7 +212,6 @@ header .right span span.active {
 }
 
 .right-panel {
-  display: flex;
   min-height: 100vh;
   width: min(90%, 340px);
   background-color: white;
@@ -171,7 +220,6 @@ header .right span span.active {
   box-shadow: -8px 0px 16px 0px hwb(0 36% 64%/0.274);
   right: 0px;
   top: 0px;
-  display: flex;
   text-align: left;
   align-items: flex-start;
   gap: 20px;
