--- a/footer.css
+++ b/footer.css
@@ -52,6 +52,11 @@ body {
   left: 50%; /* Adjust position */
   transform: translateX(-50%); /* Center the element */
 }
+@media screen and (max-width: 980px) {
+  #footer .follow-us {
+    padding: 20px 20px;
+  }
+}
 #footer .follow-us .container {
   display: flex;
   align-items: center;
@@ -59,8 +64,19 @@ body {
   width: 100%;
   position: relative;
 }
+@media screen and (max-width: 980px) {
+  #footer .follow-us .container {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
 #footer .follow-us .container h2 {
   font-size: 62px;
+}
+@media screen and (max-width: 980px) {
+  #footer .follow-us .container h2 {
+    font-size: 40px;
+  }
 }
 #footer .follow-us .container button {
   background-color: white;
@@ -76,6 +92,15 @@ body {
 }
 #footer .follow-us .container button:hover {
   transform: scale(1.1);
+}
+@media screen and (max-width: 980px) {
+  #footer .follow-us .container button {
+    margin-top: 10px;
+    width: 90%;
+    padding: 10px;
+    height: 100px;
+    border-radius: 30px;
+  }
 }
 #footer .follow-us .container .background-leaf {
   position: absolute;
@@ -98,6 +123,17 @@ body {
   font-weight: 600;
   border-radius: 50px;
   background-color: #4B5263;
+}
+@media screen and (max-width: 980px) {
+  #footer .follow-us .caption-4 {
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 30px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 86vw;
+    padding: 10px 15px;
+  }
 }
 
 .quote-wrapper {
