--- a/footer.scss
+++ b/footer.scss
@@ -52,15 +52,24 @@
         position: relative; /* Ensure it covers the full width */
         left: 50%; /* Adjust position */
         transform: translateX(-50%); /* Center the element */
-        
+        @media screen and (max-width: 980px) {
+          padding: 20px 20px;
+        }
         .container{
             display: flex;
             align-items: center;
             justify-content: space-between;
             width: 100%;
             position: relative;
+            @media screen and (max-width: 980px) {
+              flex-direction: column;
+              gap: 10px;
+            }
             h2{
                 font-size: 62px;
+                @media screen and (max-width: 980px) {
+                  font-size: 40px;
+                }
             }
             button{
                 background-color: white;
@@ -75,6 +84,13 @@
                 transition: all 0.2s ease;
                 &:hover{
                   transform: scale(1.1);
+                }
+                @media screen and (max-width: 980px) {
+                  margin-top: 10px;
+                  width: 90%;
+                  padding: 10px;
+                  height: 100px;
+                  border-radius: 30px;
                 }
             }
             .background-leaf{
@@ -101,6 +117,15 @@
             font-weight: 600;
             border-radius: 50px;
             background-color: #4B5263;
+            @media screen and (max-width: 980px) {
+              flex-direction: column;
+              align-items: flex-start;
+              border-radius: 30px;
+              margin-top: 10px;
+              margin-bottom: 20px;
+              width: 86vw;
+              padding: 10px 15px;
+            }
         }
     }
 }
