--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,13 @@ header {
   top: 0px;
   left: 0px;
 }
+@media screen and (max-width: 980px) {
+  header {
+    height: 60px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 header .logo {
   display: flex;
   align-items: center;
@@ -38,20 +45,30 @@ header .logo {
   gap: 10px;
   pointer-events: none;
 }
+@media screen and (max-width: 980px) {
+  header .logo {
+    font-size: 18px;
+  }
+}
 header .logo img {
   height: 60px;
+}
+@media screen and (max-width: 980px) {
+  header .logo img {
+    height: 40px;
+  }
 }
 header .hamburger {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 6px;
+  gap: 4px;
   cursor: pointer;
 }
 header .hamburger .line {
-  width: 32px;
-  height: 4px;
+  width: 24px;
+  height: 3px;
   background-color: black;
 }
 @media screen and (min-width: 980px) {
@@ -135,11 +152,21 @@ header .right span span.active {
   text-align: center;
   margin-top: 96px;
 }
+@media screen and (max-width: 980px) {
+  #landing-section {
+    padding-top: 0%;
+  }
+}
 #landing-section h1 {
   font-size: 66px;
   font-weight: 900;
   letter-spacing: -3px;
   line-height: 1;
+}
+@media screen and (max-width: 980px) {
+  #landing-section h1 {
+    font-size: 52px;
+  }
 }
 #landing-section > h2 {
   margin-top: 40px;
@@ -200,6 +227,11 @@ header .right span span.active {
   letter-spacing: -1px;
   font-weight: 700;
 }
+@media screen and (max-width: 980px) {
+  #about-section h2 {
+    font-size: 150%;
+  }
+}
 #about-section h3 {
   line-height: 1.1;
   letter-spacing: -1px;
@@ -215,8 +247,19 @@ header .right span span.active {
   /* Optional: Adds a gap between grid items */
   grid-auto-rows: 400px;
 }
+@media screen and (max-width: 980px) {
+  #about-section .grid-container {
+    display: flex;
+    flex-direction: column;
+  }
+}
 #about-section .grid-container img {
   width: 100%;
+}
+@media screen and (max-width: 980px) {
+  #about-section .grid-container img {
+    height: 100%;
+  }
 }
 #about-section .grid-container .grid-item {
   border-radius: 40px;
@@ -236,6 +279,11 @@ header .right span span.active {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media screen and (max-width: 980px) {
+  #about-section .grid-container .item2 {
+    display: none;
+  }
 }
 #about-section .grid-container .item2 img {
   height: 90%;
@@ -265,6 +313,12 @@ header .right span span.active {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (max-width: 980px) {
+  #about-section .caption-3 {
+    margin-top: 40px;
+    font-size: 130%;
+  }
 }
 #about-section .caption-3 h3 {
   margin-bottom: 32px;
@@ -305,9 +359,22 @@ header .right span span.active {
   background-color: #050F27;
   color: white;
 }
+@media screen and (max-width: 980px) {
+  #landing-end .get-quote {
+    padding: 30px;
+    flex-direction: column;
+  }
+}
 #landing-end .get-quote h3 {
   font-size: 40px;
   width: 60%;
+}
+@media screen and (max-width: 980px) {
+  #landing-end .get-quote h3 {
+    font-size: 26px;
+    width: 90%;
+    margin-bottom: 24px;
+  }
 }
 #landing-end .get-quote button {
   background-color: #121B32;
@@ -315,6 +382,12 @@ header .right span span.active {
   font-weight: 600;
   cursor: pointer;
   transition: all 0.2s ease;
+}
+@media screen and (max-width: 980px) {
+  #landing-end .get-quote button {
+    width: 90%;
+    font-size: 26px;
+  }
 }
 #landing-end .get-quote button:hover {
   background-color: #20315c;
