--- a/styles.scss
+++ b/styles.scss
@@ -30,6 +30,11 @@ header {
   position: fixed;
   top: 0px;
   left: 0px;
+  @media screen and (max-width: 980px) {
+    height: 60px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 
   .logo {
     display: flex;
@@ -38,8 +43,14 @@ header {
     font-size: 24px;
     gap: 10px;
     pointer-events: none;
+    @media screen and (max-width: 980px) {
+      font-size: 18px;
+    }
     img {
       height: 60px;
+      @media screen and (max-width: 980px) {
+        height: 40px;
+      }
     }
   }
 
@@ -48,11 +59,11 @@ header {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 6px;
+    gap: 4px;
     cursor: pointer;
     .line {
-      width: 32px;
-      height: 4px;
+      width: 24px;
+      height: 3px;
       background-color: black;
     }
     @media screen and (min-width: 980px) {
@@ -143,12 +154,18 @@ header {
   padding: 5% 5%;
   text-align: center;
   margin-top: 96px;
+  @media screen and (max-width: 980px) {
+    padding-top: 0%;
+  }
 
   h1 {
     font-size: 66px;
     font-weight: 900;
     letter-spacing: -3px;
     line-height: 1;
+    @media screen and (max-width: 980px) {
+      font-size: 52px;
+    }
   }
 
   &>h2 {
@@ -239,6 +256,9 @@ header {
     line-height: 1.1;
     letter-spacing: -1px;
     font-weight: 700;
+    @media screen and (max-width: 980px) {
+      font-size: 150%;
+    }
   }
 
   h3 {
@@ -257,10 +277,17 @@ header {
     row-gap: 36px;
     /* Optional: Adds a gap between grid items */
     grid-auto-rows: 400px;
+    @media screen and (max-width: 980px) {
+      display: flex;
+      flex-direction: column;
+    }
 
     img {
       // width: 100%;
       width: 100%;
+      @media screen and (max-width: 980px) {
+        height: 100%;
+      }
     }
 
     .grid-item {
@@ -284,6 +311,9 @@ header {
       display: flex;
       align-items: center;
       justify-content: center;
+      @media screen and (max-width: 980px) {
+        display: none;
+      }
 
       img {
         // transform: scale(0.8);
@@ -320,6 +350,10 @@ header {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    @media screen and (max-width: 980px) {
+      margin-top: 40px;
+      font-size: 130%;
+    }
     h3 {
       margin-bottom: 32px;
     }
@@ -364,18 +398,32 @@ header {
     background-color: #050F27;
     color: white;
 
+    @media screen and (max-width: 980px) {
+      padding: 30px;
+      flex-direction: column;
+    }
+    
     // transition: all 0.2s ease;
     h3 {
       font-size: 40px;
       width: 60%;
+      @media screen and (max-width: 980px) {
+        font-size: 26px;
+        width: 90%;
+        margin-bottom: 24px;
+      }
     }
-
+    
     button {
       background-color: #121B32;
       border-radius: 60px;
       font-weight: 600;
       cursor: pointer;
       transition: all .2s ease;
+      @media screen and (max-width: 980px) {
+        width: 90%;
+        font-size: 26px;
+      }
 
       &:hover {
         background-color: #20315c;
