--- a/testimonials.css
+++ b/testimonials.css
@@ -10,10 +10,16 @@
   padding: 0px;
 }
 
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   background-color: #ffffff;
   font-family: "SatoshiVariable", Helvetica, sans-serif;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 header {
@@ -30,6 +36,13 @@ header {
   top: 0px;
   left: 0px;
 }
+@media screen and (max-width: 980px) {
+  header {
+    height: 60px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 header .logo {
   display: flex;
   align-items: center;
@@ -38,20 +51,30 @@ header .logo {
   gap: 10px;
   pointer-events: none;
 }
+@media screen and (max-width: 980px) {
+  header .logo {
+    font-size: 18px;
+  }
+}
 header .logo img {
   height: 60px;
+}
+@media screen and (max-width: 980px) {
+  header .logo img {
+    height: 40px;
+  }
 }
 header .hamburger {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 6px;
+  gap: 4px;
   cursor: pointer;
 }
 header .hamburger .line {
-  width: 32px;
-  height: 4px;
+  width: 24px;
+  height: 3px;
   background-color: black;
 }
 @media screen and (min-width: 980px) {
@@ -112,6 +135,11 @@ header .right span span.active {
   letter-spacing: -3px;
   line-height: 1;
 }
+@media screen and (max-width: 980px) {
+  #testimonial-top h1 {
+    font-size: 40px;
+  }
+}
 #testimonial-top > h2 {
   margin-top: 40px;
   font-weight: 600;
@@ -135,6 +163,12 @@ header .right span span.active {
   line-height: 1.1;
   letter-spacing: -1px;
 }
+@media screen and (max-width: 980px) {
+  #testimonial-top p {
+    margin-top: 75px;
+    margin-bottom: 50px;
+  }
+}
 
 #testimonial-mid {
   padding: 3% 0%;
@@ -151,6 +185,15 @@ header .right span span.active {
   /* Gap between grid items */
   padding: 20px;
 }
+@media screen and (max-width: 980px) {
+  #testimonial-mid .main-grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+}
 #testimonial-mid .grid-container {
   display: grid;
   gap: 20px;
@@ -162,12 +205,29 @@ header .right span span.active {
   background-color: #ffffff;
   border-radius: 60px;
 }
+@media screen and (max-width: 980px) {
+  #testimonial-mid .grid-container {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+  }
+}
 #testimonial-mid .image-left img {
   width: 100%;
   height: auto;
   max-height: 450px;
   border-radius: 20px;
   margin-left: 50px;
+}
+@media screen and (max-width: 980px) {
+  #testimonial-mid .image-left img {
+    width: 100% !important;
+    height: 100%;
+    margin: 0px;
+  }
 }
 #testimonial-mid .text-center {
   grid-column: 2/3;
@@ -183,6 +243,12 @@ header .right span span.active {
   color: #050F27;
   border-radius: 20px;
 }
+@media screen and (max-width: 980px) {
+  #testimonial-mid .text-center {
+    padding: 20px;
+    font-size: 26px;
+  }
+}
 #testimonial-mid .image-right1 {
   grid-column: 2/3;
   grid-row: 1/2;
@@ -191,6 +257,11 @@ header .right span span.active {
   grid-column: 2/3;
   grid-row: 2/3;
   margin-top: -270px;
+}
+@media screen and (max-width: 980px) {
+  #testimonial-mid .image-right2 {
+    margin-top: 0px;
+  }
 }
 #testimonial-mid .image-right1 img,
 #testimonial-mid .image-right2 img {
@@ -206,9 +277,20 @@ header .right span span.active {
   line-height: 1.1;
   padding: 150px 0px;
 }
+@media screen and (max-width: 980px) {
+  #testimonial-end .text1 {
+    padding: 30px 0px;
+    font-size: 34px;
+  }
+}
 #testimonial-end .main-grid {
   background-color: #ffffff;
   padding: 0px 75px;
+}
+@media screen and (max-width: 980px) {
+  #testimonial-end .main-grid {
+    padding: 0px 30px;
+  }
 }
 #testimonial-end .grid-container {
   background-color: #f4f4f4;
@@ -220,6 +302,13 @@ header .right span span.active {
   width: 100%; /* Full width of the page */
   margin: 0 auto; /* Center the container */
   padding: 70px;
+}
+@media screen and (max-width: 980px) {
+  #testimonial-end .grid-container {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+  }
 }
 #testimonial-end .grid-container .grid-item {
   display: flex;
@@ -256,6 +345,12 @@ header .right span span.active {
   font-weight: 700;
   font-size: 60px;
   line-height: 1.1;
+}
+@media screen and (max-width: 980px) {
+  #testimonial-end .grid-text1 {
+    font-size: 36px;
+    margin-left: 20px;
+  }
 }
 #testimonial-end .grid-item1, #testimonial-end .grid-item2, #testimonial-end .grid-item3, #testimonial-end .grid-item4, #testimonial-end .grid-item5, #testimonial-end .grid-item6, #testimonial-end .grid-item7 {
   background-color: #f0f0f0;
