--- a/contactus.scss
+++ b/contactus.scss
@@ -235,7 +235,7 @@ header {
       top: 40px;
       cursor: pointer;
     }
-    display: none;
+    display: none !important;
     &.visible {
       display: flex !important;
     }
